--- a/app/src/styles/_variables.scss
+++ b/app/src/styles/_variables.scss
@@ -255,7 +255,7 @@ $grid-float-breakpoint:     $screen-sm-min !default;
 // -------------------------
 
 // Basics of a navbar
-$navbar-height:                    50px !default;
+$navbar-height:                    40px !default;
 $navbar-margin-bottom:             $line-height-computed !default;
 $navbar-border-radius:             $border-radius-base !default;
 $navbar-padding-horizontal:        floor($grid-gutter-width / 2) !default;
